Added non-GUI Qt code into lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,6 @@ ADD_DEFINITIONS( ${QT_DEFINITIONS} )
 
 #INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
-ADD_LIBRARY( hello_cmake ${hello_cmake_SOURCES} )
-#TARGET_LINK_LIBRARIES( hello_cmake ${QT_LIBRARIES} )
+ADD_LIBRARY( hello_cmake SHARED ${hello_cmake_SOURCES} )
+TARGET_LINK_LIBRARIES( hello_cmake ${QT_LIBRARIES} )
 
