--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,11 @@
-#http://developer.qt.nokia.com/quarterly/view/using_cmake_to_build_qt_projects
-
 PROJECT(hello_cmake_lib)
 FIND_PACKAGE(Qt4 REQUIRED)
+SET(QT_DONT_USE_QTGUI TRUE) #this lib doesn't need GUI module, which is included by default
 
 SET(hello_cmake_SOURCES mylib.cpp)
-#SET(hello_cmake_HEADERS myqtapp.h)
-#SET(hello_cmake_FORMS myqtapp.ui)
-
-#QT4_WRAP_CPP(hello_cmake_HEADERS_MOC ${hello_cmake_HEADERS} )
-#QT4_WRAP_UI( hello_cmake_FORMS_HEADERS ${hello_cmake_FORMS} )
 
 INCLUDE( ${QT_USE_FILE} )
 ADD_DEFINITIONS( ${QT_DEFINITIONS} )
-
-#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
 ADD_LIBRARY( hello_cmake SHARED ${hello_cmake_SOURCES} )
 TARGET_LINK_LIBRARIES( hello_cmake ${QT_LIBRARIES} )
